# D0018E-Webshop

./: .dockerignore  .envB  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  MockData.json  README.md  compose.yml  diesel.toml  docker-compose-dev.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Login.tsx  Register.tsx  ShoppingCart.css  ShoppingCart.tsx  checkout.tsx  complete.css  complete.tsx  index.css  main.tsx  react-env.d.ts  useAuth.tsx
frontend/src/admin/: Admin.css  Index.tsx  Items.tsx  Orders.tsx  Products.tsx  Users.tsx
frontend/src/auth/: Login.tsx  ProtectedRoute.tsx  Register.tsx
frontend/src/etc/: api_url.ts  const.ts
frontend/src/navbar/: Navigation.css  Navigation.tsx
frontend/src/product/: Product.css  Product.tsx  Review.tsx
frontend/src/types/: models.d.ts
migrations/2025-02-13-222524_items/: up.sql
migrations/2025-02-13-222601_users/: up.sql
migrations/2025-02-17-132610_users/: up.sql
migrations/2025-02-28-162949_carts/: up.sql
migrations/2025-03-05-092236_reviews/: up.sql
migrations/2025-03-05-194519_orders/: up.sql
migrations/2025-03-05-195144_order_items/: up.sql
migrations/2025-03-11-102226_comments/: up.sql
src/: api.rs  error.rs  file_handler.rs  lib.rs  main.rs  model.rs  models.rs  schema.rs  setup_db.rs  update_db.rs
src/api/: account.rs  api.rs  cart.rs  mod.rs  order.rs  reviews.rs
src/api/admin/: items.rs  mod.rs  orders.rs  users.rs
src/api/order/: management.rs  mod.rs
src/auth/: auth.rs  ctx.rs  login.rs  middleware.rs  mod.rs  routes.rs  session.rs
src/db/: mod.rs  models.rs
