[package]
name = "D0018E-Webshop"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = "0.8.1"
axum_session = "0.16.0"
axum_session_auth = "0.16.0"
dotenv = "0.15.0"
mysql = "26.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors",  "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "setup_db"
path = "src/setup_db.rs"
